// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkButton should include a className if set 1`] = `
<div>
  <a
    class="bg-purple-700 text-white font-bold py-2 px-4 rounded-full hover:bg-pink-600 transition-all duration-500 ease-in-out test"
    href="#"
  >
    Test 123
  </a>
</div>
`;

exports[`LinkButton should render with default locale set 1`] = `
<div>
  <a
    class="bg-purple-700 text-white font-bold py-2 px-4 rounded-full hover:bg-pink-600 transition-all duration-500 ease-in-out "
    href="#"
  >
    Test 123
  </a>
</div>
`;
